--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <meta name="viewport" content="user-scalable=no" />
     <title>Piano Online</title>
     <link rel="shortcut icon" href="./favicon.png" />
+    <link href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.19/dist/tailwind.min.css" rel="stylesheet" />
 
     <link href="/static/css/share.min.css" rel="stylesheet" />
   </head>
